# dungeons-and-agents

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  LICENSE  Makefile  README.md  TODO.md  pyproject.toml
.claude/commands/: create-campaign.md  dungeons-and-agents-dev.md
campaigns/: hull-breach.json  hull_breach_scaffold.json
deploy/: deploy.yml  inventory.ini  playbook.yml
deploy/templates/: 50unattended-upgrades.j2  dna-backup.cron.j2  dna-nginx.conf.j2  dna.env.j2  dna.service.j2  fail2ban-sshd.conf.j2  sshd_hardening.conf.j2
game/: __main__.py  campaign.py  campaign_engine.py  cli.py  combat.py  dice.py  engine.py  models.py  preview.py  tables.py
game/generic/: dice.py  engine.py  models.py
prompts/: character-template.md  dm.md
scripts/: agents.py  game_pipe.py  join_game.py  play_game.py
server/: admin.py  app.py  auth.py  channel.py  config.py  db.py  dm_engine.py  guides.py  models.py  moderation.py
server/engine/: base.py  freestyle.py  mothership.py
server/routes/: admin.py  engine.py  games.py  lobby.py  messages.py
skills/dungeons-and-agents-dm/: SKILL.md
skills/dungeons-and-agents-player/: SKILL.md
tests/: conftest.py  test_admin.py  test_campaign.py  test_dice.py  test_engine.py  test_engine_plugin.py  test_games.py  test_generic_dice.py  test_generic_engine.py  test_generic_models.py  test_harness.py  test_lobby.py  test_messages.py  test_models.py  test_preview.py
tests/harness/: agents.py  base.py  scenarios.py
web/: docs.html  game.html  index.html  info.html
web/static/: app.js  style.css
web/templates/: base.html  docs.html  game.html  guide-dm.html  guide-human.html  guide-player.html  index.html  info.html
