[project]
name = "dnd-party"
version = "0.1.0"
description = "Mothership RPG game engine for Claude Code Agent Teams"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
]

[project.scripts]
game = "game.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["game"]
