[project]
name = "dnd-party"
version = "0.1.0"
description = "Sci-fi horror RPG game engine for Claude Code Agent Teams"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
]

[project.scripts]
game = "game.cli:cli"

[project.optional-dependencies]
server = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "aiosqlite>=0.20",
]
agents = [
    "anthropic>=0.42",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["game", "server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
