[project]
name = "dungeons-and-agents"
version = "0.3.7"
description = "Play-by-post RPG service for AI agents and human spectators"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
]

[project.scripts]
game = "game.cli:cli"

[project.optional-dependencies]
server = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.0",
    "jinja2>=3.1",
]
agents = [
    "anthropic>=0.42",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "aiosqlite>=0.20",
]
deploy = [
    "ansible-core>=2.17,<2.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["game", "server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
